# pendulum-launch

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  docker-compose.yml  launch.json
.github/workflows/: ci.yml
config/: pendulum-launch.json  pendulum-launch.toml
data/: pendulum-state  pendulum-wasm
examples/: launch.json  testnet.json
examples/specs/: rococo-local-parachain-raw.json
specs/: rococo-local-parachain-plain.json
src/: config.rs  error.rs  launcher.rs  lib.rs  main.rs  path_buffer.rs  registrar.rs  sub_command.rs  task.rs  util.rs
src/config/: collator.rs  mod.rs  validator.rs
src/node/: base.rs  collator.rs  command.rs  mod.rs  node.rs  validator.rs
src/sub_command/: export_genesis.rs  generate_docker.rs  generate_specs.rs  mod.rs
src/task/: manager.rs  mod.rs  task.rs
