[package]
name = "pendulum-launch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pendulum_launch"
path = "src/bin/cli/main.rs"

[lib]
name = "lib_pendulum_launch"
path = "src/lib.rs"

[dependencies]
ctrlc = "3.2.1"
serde = { version = "1.0.136", features = ["derive"] } 
serde_json ="1.0.78"
signal-hook = "0.3.13"
structopt = "0.3.26"
thiserror = "1.0.30"
toml = "0.5.8"
