[package]
name = "pendulum-launch"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*/"]
exclude = ["crates"]

[[bin]]
name = "pendulum-launch"
path = "src/bin/cli/main.rs"

[lib]
name = "lib_pendulum_launch"
path = "src/lib.rs"

[dependencies]
ctrlc = { version = "3.2.1", features = [ "termination"], git = "https://github.com/xiuxiu62/rust-ctrlc.git" }
# ctrlc = { version = "3.2.1", features = [ "termination"], path = "./crates/rust-ctrlc" }
json = "0.12.4"
serde = { version = "1.0.136", features = ["derive"] } 
serde_json ="1.0.78"
signal-hook = "0.3.13"
structopt = "0.3.26"
thiserror = "1.0.30"
