[package]
name = "pendulum-launch"
version = "0.2.0"
authors = ["xiuxiu62 <justin@satoshipay.io>"]
edition = "2021"
description = "A launcher for Pendulum and other substrate parachains"
documentation = "https://app.gitbook.com/o/axoDOM7fvGlVLdMc0tdk/s/JPteeI8zaYldKmZxPrYG/build/using-pendulum-launch"
license = "Unlicense"

[[bin]]
name = "pendulum-launch"
path = "src/bin/cli/main.rs"

[lib]
name = "lib_pendulum_launch"
path = "src/lib.rs"

[dependencies]
ctrlc = { version = "3.2.1", features = [ "termination"], git = "https://github.com/xiuxiu62/rust-ctrlc.git" }
json = "0.12.4"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] } 
serde_json ="1.0.78"
structopt = "0.3.26"
thiserror = "1.0.30"
